--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3360/proyecto
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=AdrFue4Database
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+jwt.secret = secret
+jwt.expiration = 36000
